update profile and fix z-index notification

--- a/src/compenents/topnav/tonavmessages/TopNavMessages.scss
+++ b/src/compenents/topnav/tonavmessages/TopNavMessages.scss
@@ -131,7 +131,7 @@
   @include mobile {
     position: fixed;
     background-color: white;
-
+    z-index: 99;
     bottom: 0;
     left: 0;
     padding: 0 2rem;
