--- a/src/compenents/topnav/topnavhome/TopNavHome.scss
+++ b/src/compenents/topnav/topnavhome/TopNavHome.scss
@@ -13,7 +13,7 @@
 
   position: fixed;
   top: 0;
-//   z-index: 99;
+  z-index: 99;
   @include flex(center, unset);
 
   // @include mobile{
@@ -122,8 +122,8 @@
 
   @include mobile {
     position: fixed;
-    background-color: white;
-
+    
+    z-index: 99;
     bottom: 0;
     left: 0;
     padding: 0 2rem;
