--- a/src/compenents/topnav/topnavprofile/TopNavProfile.scss
+++ b/src/compenents/topnav/topnavprofile/TopNavProfile.scss
@@ -8,6 +8,7 @@
   height: 5rem;
   background: rgba(255,255,255,0.5);
   // background-color: blanchedalmond;
+  z-index: 99;
   
 
 
