--- a/src/pages/notifications/Notifications.scss
+++ b/src/pages/notifications/Notifications.scss
@@ -81,6 +81,7 @@
         display: flex;
         width: 100%;
         // background-color: aqua;
+        z-index: 0;
 
         @include mobile {
           width: 100%;
